# MapProject1

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  categories.py  db.py  geo.py  main.py  overpass.py  schemas.py  settings.py
docs/: spielkarten-konzept.md
frontend/: README.md  app.js  index.html  styles.css
