[project]
name = "mapproject-backend"
version = "0.1.0"
description = "Backend for the IRL Hide and Seek map game."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.uvicorn]
factory = false

